[tool.poetry]
name = "pyo3-psbt"
version = "0.1.0"
description = ""
authors = ["Rafael Viscarra <rafael@viscarra.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
maturin = {extras = ["patchelf"], version = "^1.7.0"}
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"